--- a/src/scss/components/_productCart.scss
+++ b/src/scss/components/_productCart.scss
@@ -1,29 +1,35 @@
 .product-card {
-	display: flex;
+	 /* задаем максимальную ширину карточки */
+	// height: 100%;
+
+	&__wrapper{
+		height: 100%;
+		display: flex;
 	flex-direction: column;
 	overflow: hidden;
 	word-wrap: break-word;
 	box-shadow: 0px 14px 39px -11px rgba(0, 0, 0, 0.06);
 	border-radius: 10px;
 	padding: 30px;
+	width: 100%;
+	 align-items: stretch;
+	max-width: 400px;
+	}
 
 	// .product-card__image
 	&__image {
-		width: 300px;
-		height: 300px;
-		display: block;
+		display: flex;
+		justify-content: center;
+		align-items: center; 
+		height: 400px;
+		margin-bottom: 20px;
 	}
 
 	&__image img {
-		max-height: 100%;
-		width: 100%;
-
-		object-fit: cover;
+		max-width: 100%;
+		// height: auto;
+		display: block;
 	}
-
-	
-
-	
 
 	// .product-card__volum-weight
 
@@ -31,6 +37,7 @@
 		font-size: 12px;
 		margin-bottom: 10px;
 		line-height: 16px;
+		
 		& span {
 			margin-right: 5px;
 		}
@@ -50,6 +57,8 @@
 
 	&__info {
 		margin-bottom: 10px;
+		flex: 1 0 auto;
+		
 	}
 
 	// .product-card__info-text
@@ -92,10 +101,24 @@
 		font-weight: 700;
 		justify-content: space-between;
 		transition: all 0.3s;
-		
 
 		& img {
 			margin-left: 5px;
+		}
+	}
+}
+
+@media only screen and (max-width: 1190px) {
+	.product-card {
+		
+		&__image {
+			
+
+			img {
+				// max-width: 100%;
+				// height: auto;
+				// display: block;
+			}
 		}
 	}
 }
