--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,13 +9,30 @@ hr {
 // }
 //=========================header start====================
 .header {
-	position: relative;
+	position: fixed;
+	width: 100%;
+	background-color: #ffffff;
+	transition: all 0.3s;
+
 	z-index: 15;
 	&__top {
+		transition: opacity 0.3s, -webkit-opacity 0.3s;
+		transform-origin: center;
 		padding: 14px 0;
+		
+		opacity: 1;
 		& a {
 			color: #000;
 		}
+	}
+	&__top.fixed-header {
+		position: fixed;
+		top: 0;
+
+		background-color: #ffffff;
+		width: 100%;
+		z-index: 11;
+		box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	}
 
 	&__top-inner {
@@ -42,7 +59,7 @@ hr {
 			width: 35%;
 			height: 1px;
 			background-color: #fff;
-			
+
 			&::after {
 				position: absolute;
 				content: "";
@@ -80,6 +97,16 @@ hr {
 	&__cart-box {
 		display: flex;
 		align-items: center;
+	}
+	&__center {
+		
+		
+		transform: translateY(0px); 
+		padding: 10px 0;
+		width: 100%;
+		z-index: 20;
+		background-color: #fff;
+		  transition: transform 0.3s ease-in-out;
 	}
 
 	&__center-inner {
@@ -126,13 +153,33 @@ hr {
 	}
 }
 
+.header.fixed-header {
+	& .header__center {
+		position: fixed;
+		top: 0;
+		background-color: #ffffff;
+		width: 100%;
+		z-index: 1;
+		box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	}
+	& .header__center{
+		padding: 0 ;
+		  transform: translateY(0px); 
+	}
+
+	& .header__top {
+		
+		opacity: 0;
+	}
+}
+
 .header-nav__js {
 	position: fixed;
-	top: 159px;
+	top: 93px;
 
-	left: -1250px;
+	left: -2000px;
 	width: 100%;
-	padding: 0;
+	padding-top: 100px;
 	transition: left 0.5s;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -464,10 +511,6 @@ hr {
 
 	//==============header-nav-js start=====================
 	.header-nav {
-		&__js {
-			padding-top: 20px;
-		}
-
 		&__wrapper {
 			padding: 0 15px;
 		}
