--- a/src/scss/page/Product.scss
+++ b/src/scss/page/Product.scss
@@ -4,7 +4,10 @@
 		display: flex;
 		align-items: center;
 	}
-
+	&__img {
+		width: 70%;
+		
+	}
 	&__img img {
 		width: 100%;
 		height: 100%;
@@ -40,6 +43,7 @@
 		padding-top: 25px;
 		display: flex;
 		align-items: center;
+		justify-content: space-between;
 		gap: 40px;
 	}
 
