Доработка логики корзины, поправила верстку на странице товара и в карточке товара

--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -5,4 +5,6 @@
 @import "./header";
 @import "./productCart";
 @import "./sort";
-@import "./cartIremProduct"
+@import "./cartIremProduct";
+@import "./modal.scss";
+
