--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,10 +35,8 @@ main {
 	
 }
 
+.button-hover:hover{
+	background-color: #dc9a20;
+	
+}
 
-// button,
-// a {
-// 	&:hover {
-// 		background-color: #f7a706;
-// 	}
-// }
