--- a/src/scss/components/_cartIremProduct.scss
+++ b/src/scss/components/_cartIremProduct.scss
@@ -20,19 +20,32 @@
 	}
 }
 .description {
-	
-	&__text {
+	&__separator {
+		border: 1px dashed #3f4e65;
+		height: 49px;
+
+		opacity: 0.2;
+		width: 1px;
+	}
+	&__product-card {
+		padding: 15px;
+		border-radius: 80px;
+		background-color: #ffc85e;
+		transition: all 0.3s;
 		
 	}
 }
 
-@media screen and (max-width: 920px) {
+@media screen and (max-width: 1190px) {
 	.cart-product {
 		&__item {
 			padding: 50px 0;
 		}
 		&__wrapper {
+			display: flex;
 			flex-direction: column;
+			align-items: center;
+		
 		}
 	}
 }
