--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -12,22 +12,88 @@
 	opacity: 0;
 	transition: 0.5s;
 	pointer-events: none; //временно отключить взаимодействие с модальным окном
-	
 }
 .modal.active {
 	opacity: 1;
 	pointer-events: all; // включает взаимодействие с модальным окном
 }
 
-.modal__content {
-	padding: 20px;
-	border-radius: 12px;
-	background-color: #fff;
-	transform: scale(0.5);
-	transition: 0.4s all;
-	width: 24vw;
+.modal {
+	&__content {
+		padding: 20px;
+		border-radius: 12px;
+		background-color: #fff;
+		transform: scale(0.5);
+		transition: 0.4s all;
+		width: 40%;
 
-	&.active {
-		transform: scale(1);
+		&.active {
+			transform: scale(1);
+		}
+	}
+	&__inner {
+		padding: 120px 100px;
+		text-align: center;
+		& span {
+			display: block;
+			position: absolute;
+			top: 30px;
+			right: 30px;
+		}
+		
+		& p{
+			font-weight: 300;
+			font-size: 20px;
+
+		}
+	}
+	&__title{
+			font-weight: 500;
+			text-transform: uppercase;
+			margin: 20px 0;
+			font-size: 40px;
+		}
+}
+@media screen and (max-width: 1190px) {
+	.modal {
+		&__content {
+			width: 50%;
+		}
+		&__inner {
+
+			position: relative;
+			& span{
+				top: 10px;
+				right: 10px;
+			}
+			& p{
+				font-size: 18px;
+			}
+		}
+		&__title{
+			font-weight: 500;
+			text-transform: uppercase;
+			margin: 20px 0;
+			font-size: 32px;
+		}
+	}
+}
+@media screen and (max-width: 820px) {
+	.modal {
+		&__content {
+			width: 90%;
+		}
+		&__inner {
+			padding: 50px;
+			position: relative;
+			
+			& p{
+				font-size: 12px;
+			}
+		}
+		&__title{
+			
+			font-size: 20px;
+		}
 	}
 }
